IGNITE-11153 Support Java 11 for control.sh & ignitevisorcmd.sh: remove odd --add-modules for java.xml.bind (#6017)
(cherry picked from commit e70a3b4dd973a9a8dc7a77c61900304fd5512e48)